--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,15 +45,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/sourcelangchoice"
-            android:text="ENGLISH"
-            app:cornerRadius="25dp"
-            android:layout_weight="1"
-            android:layout_marginEnd="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </com.google.android.material.button.MaterialButton>
+                <Spinner
+                    android:id="@+id/sourcelangchoice"
+                    app:cornerRadius="25dp"
+                    android:layout_weight="1"
+                    android:minHeight="48dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/white"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:padding="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                </Spinner>
 
         <ImageView
             android:src="@drawable/ic_baseline_arrow_forward_24"
@@ -61,15 +66,20 @@
             android:layout_height="wrap_content">
         </ImageView>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/translangchoice"
-            android:layout_width="wrap_content"
-            android:text="GERMAN"
-            android:layout_marginEnd="5dp"
-            android:layout_weight="1"
-            app:cornerRadius="25dp"
-            android:layout_height="wrap_content">
-        </com.google.android.material.button.MaterialButton>
+                <Spinner
+                    android:id="@+id/translangchoice"
+                    android:layout_width="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:minHeight="48dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:textColor="@color/white"
+                    android:padding="10dp"
+                    android:layout_weight="1"
+                    app:cornerRadius="25dp"
+                    android:layout_height="wrap_content">
+                </Spinner>
 
     </LinearLayout>
 
